--- a/templates/edit.html
+++ b/templates/edit.html
@@ -23,18 +23,18 @@
             return button.render();   // return button as jquery object
         };
 
-        var commentButton = function(context){
+        var removeHighlights = function(context){
             var ui = $.summernote.ui;
 
             // create button
             var button = ui.button({
-                contents: '<i class="fa fa-thumbs-up border-0"/></i>',
-                tooltip: 'Add a comment',
+                contents: '<i class="fa fa-eraser border-0"/></i>',
+                tooltip: 'Remove readability suggestions',
                 click: function () {
                  // invoke insertText method with 'hello' on editor module.
-                var highlight = window.getSelection();
-                var html = "<span style='position: relative'><span onmouseout='mouseOut()' onmouseover='mouseOver()' class='bg-warning' style='position: absolute'>" + highlight + '</span><div id="div1" style="display:none; position:absolute" class="card"> some text to show </div></span>';
-                context.invoke('editor.pasteHTML', html);
+                var highlight = $('#summernote').summernote('code');
+                var html = highlight.replace(/adverb|passive|veryHardSentence|complex|hardSentence/, "");
+                $('#summernote').summernote('code', html);
             }
             }  );
 
@@ -55,11 +55,11 @@
         ['para', ['ul', 'ol', 'paragraph']],
         ['table', ['table']],
         ['insert', ['link', 'picture', 'video']],
-        ['view', ['fullscreen', 'codeview', 'help']], ['mybutton', ['wiki']]
+        ['view', ['fullscreen', 'codeview', 'help']], ['mybutton', ['wiki', 'comment']]
         ],
         buttons: {
             wiki: HelloButton,
-            comment: commentButton
+            comment: removeHighlights
         }
         });
     });
