--- a/templates/indexLayout.html
+++ b/templates/indexLayout.html
@@ -17,7 +17,7 @@
         <link href="/static/styles.css" rel="stylesheet" defer>
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css" defer>
 
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js" defer></script>
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" defer></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" defer></script>
         <script src="https://www.w3schools.com/lib/w3.js" defer></script>
@@ -29,7 +29,7 @@
         <script defer>
         "use strict";
 
-        !function() {
+        function LoadDriftWidget() {
           var t = window.driftt = window.drift = window.driftt || [];
           if (!t.init) {
             if (t.invoked) return void (window.console && console.error && console.error("Drift snippet included twice."));
@@ -48,15 +48,18 @@
               i.parentNode.insertBefore(o, i);
             };
           }
-        }();
         drift.SNIPPET_VERSION = '0.3.1';
-        drift.load('k23xikig2n5u');
+        drift.load('k23xikig2n5u')};
+
+        setTimeout(function(){
+             LoadDriftWidget();
+        }, 3000);
         </script>
         <!-- End of Async Drift Code -->
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-162663603-1"></script>
-        <script>
+        <script defer>
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
@@ -64,7 +67,7 @@
             gtag('config', 'UA-162663603-1');
         </script>
 
-        <script>
+        <script defer>
         	var beamer_config = {
         		product_id : 'FACxsuQA21706' //DO NOT CHANGE: This is your product code on Beamer
         	};
@@ -156,7 +159,7 @@
     <a href="https://www.dcyphr.org" style="color:white" target="_blank"> www.dcyphr.org </a>
   </div>
   <!-- Copyright -->
-
+  <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us8.list-manage.com","uuid":"1c38534c3ddafced299e23a1c","lid":"52012213fb","uniqueMethods":true}) })</script>
 </footer>
 <!-- Footer -->
 </html>
