--- a/templates/method_summary.html
+++ b/templates/method_summary.html
@@ -7,10 +7,25 @@
 {% block main %}
 
 <div class="container my-3 p-4 text-left">
-    <div class="mb-2 pl-3 " style="color: DodgerBlue; font-size: 2.8em">{{ methods[0]["name"] }}</div>
+    <div class="mb-2 pl-3 " style="color: DodgerBlue; font-size: 2.8em">{{ methods[0]["name"] }}
+    {% if x %}
+    <button data-toggle="collapse" class="btn btn-outline-primary border20" data-target="#update"><i class="fa fa-pencil border-0"></i> Edit</button>
+    {% else %}
+    <button data-toggle="collapse" class="btn btn-outline-primary border20" data-target="#update" disabled><i class="fa fa-pencil border-0"></i> Edit</button>
+    {% endif %}
+    </div>
     <div class="mt-3 pl-4" style="font-size: 1.5em">
         {{ methods[0]["description"] }}
     </div>
+
+    <form action="/methodupdate/{{ methods[0]['id'] }}" id="update" method="POST" class="collapse">
+        <div class="row p-3">
+        <textarea name="summary" id="summary" class="border20 p-2 w-100" rows="10">{{ methods[0]['description'] }}</textarea>
+        </div>
+        <div class="row">
+        <button type="submit" class="btn btn-outline-primary border20 btn-block">Update</button>
+        </div>
+    </form>
 </div>
 
 <!--<br>-->
