--- a/templates/index.html
+++ b/templates/index.html
@@ -300,6 +300,6 @@
         </div>
     </div>
     <a href="https://icons8.com/icon/26193/scroll-down" class="text-muted">Scroll Down icon by Icons8</a>
-    <a href="https://freesitemapgenerator.com/">Free xml sitemap generator</a>
+    <!--<a href="https://freesitemapgenerator.com/">Free xml sitemap generator</a>-->
 </div>
 {% endblock %}
