--- a/templates/explore.html
+++ b/templates/explore.html
@@ -7,7 +7,7 @@
 {% block main %}
 <div class="main">
     <div class="container">
-        <h1 class="my-5 text-left" style="font-family:Lato; font-weight:600">Explore</h1>
+        <h1 class="my-5 text-left" style="font-family:Lato; font-weight:600">Explore <br> &nbsp<small style="color: #017bff; font-size: 1.75vh"><a href="/browse/0">View all</small></h1>
         <div class="row" style="">
             {% for i in range(length) %}
             <div class="col-12 col-lg-4 col-md-6 p-0 text-left mx-auto mb-5" style="min-height: 45vh;">
@@ -46,6 +46,25 @@
                 </a>
             </div>
             {% endfor %}
+            <div class="col-12 col-lg-4 col-md-6 p-0 text-left mx-auto mb-5" style="min-height: 45vh;">
+                <a class="" href="/method/0" style="text-decoration:none;">
+                    <div class="h-100 p-0 mx-auto border20" style="width:80%; box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25); font-family: Lato;">
+                        <div class="w-100 b20t" style="background: rgba(1, 123, 255, 0.38); height:50%"></div>
+                        <div class="p-1 px-4 m-0">
+                            <div style="max-height:15vh; min-height:15vh; overflow-y:auto">
+                            <h3 class="card-title my-1" style="font-family:Lato; font-size:1.5em;"><strong>Methods</strong></h3>
+
+                                <div class="p-0 m-0 pb-4">
+
+                                    Explore our collection of experimental methods that have been dcyphr-d.
+
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </a>
+            </div>
 
         </div>
     </div>
