--- a/templates/layout.html
+++ b/templates/layout.html
@@ -112,16 +112,17 @@
             <div class="collapse navbar-collapse" id="navbar">
                     <ul class="navbar-nav mr-auto mt-2">
                         <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                              Explore
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                              <a class="dropdown-item" href="/explore" style="color: #017bff">Topics</a>
-                              <a class="dropdown-item" href="/method/0" style="color: #017bff">Methods</a>
-                              <a class="dropdown-item" href="/browse/0" style="color: #017bff">See all</a>
-                            </div>
-                         </li>
+                        <li class="nav-item"><a class="nav-link" href="/explore">Explore</a></li>
+                        <!--<li class="nav-item dropdown">-->
+                        <!--    <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
+                        <!--      Explore-->
+                        <!--    </a>-->
+                        <!--    <div class="dropdown-menu" aria-labelledby="navbarDropdown">-->
+                        <!--      <a class="dropdown-item" href="/explore" style="color: #017bff">Topics</a>-->
+                        <!--      <a class="dropdown-item" href="/method/0" style="color: #017bff">Methods</a>-->
+                        <!--      <a class="dropdown-item" href="/browse/0" style="color: #017bff">See all</a>-->
+                        <!--    </div>-->
+                        <!-- </li>-->
                         <li class="nav-item"><a class="nav-link" href="/request">Request</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -132,15 +133,16 @@
                               <a class="dropdown-item" href="/suggestions/0" style="color: #017bff">QuickTasks</a>
                             </div>
                          </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                              Help
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                              <a class="dropdown-item" href="/about" style="color: #017bff">About</a>
-                              <a class="dropdown-item" href="/contact" style="color: #017bff">Contact Us</a>
-                            </div>
-                         </li>
+                        <!--<li class="nav-item dropdown">-->
+                        <!--    <a class="nav-link" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
+                        <!--      Help-->
+                        <!--    </a>-->
+                        <!--    <div class="dropdown-menu" aria-labelledby="navbarDropdown">-->
+                        <!--      <a class="dropdown-item" href="/about" style="color: #017bff">About</a>-->
+                        <!--      <a class="dropdown-item" href="/contact" style="color: #017bff">Contact Us</a>-->
+                        <!--    </div>-->
+                        <!-- </li>-->
+                        <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
                          <!--<li class="nav-item px-4 dropdown">-->
                          <!--  <div class="row">-->
                          <!--     <a class="navbar-brand" href="/"><font color="#017bff">dcyphr</font></a>-->
