--- a/templates/password.html
+++ b/templates/password.html
@@ -6,13 +6,30 @@
 
 {% block main %}
 
-<h5 class="name">Change Password</h5>
-<br>
-<form method="POST" class="name">
-    <input type="text" class="form-control" placeholder="password" name="password">
-    <p></p>
-    <input type="text" class="form-control" placeholder="confirmation" name="confirmation">
-    <p></p>
-    <button class="btn btn-primary" type="submit">Change Password</button>
-</form>
+<div class="container">
+<br><br>
+<h2 style="font-family: Georgia;">Change Password</h2>
+<div class="p-0 mx-0 w-100">
+    <div class="row">
+        <div class="col-sm">
+            <div class="card mx-auto border20" style="width: 30rem;">
+                <form method="POST" class="name" style="margin:20px; text-align:left">
+                    <div class="form-group">
+                        <label for="password" class="text-muted" style="font-size:12px">Password</label>
+                        <input type="text" class="form-control border20 w-100" name="password" id="password">
+                    </div>
+                    <div class="form-group">
+                        <label for="confirmation" class="text-muted" style="font-size:12px">Confirm Password</label>
+                        <input type="text" class="form-control border20 w-100" name="confirmation" id="confirmation">
+                    </div>
+
+
+
+                    <button class="btn btn-outline-primary border20 btn-block" type="submit">Change Password</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
 {% endblock %}
