--- a/templates/register.html
+++ b/templates/register.html
@@ -6,6 +6,7 @@ Register
 
 
 {% block main %}
+<div class="container">
 <br>
 <br>
 <h2 style="font-family: Georgia;">Join dcyphr</h2>
@@ -57,8 +58,9 @@ Register
             </div>
         </div>
     </div>
-    <div class="row" style="margin: 20px">
+    <div class="row mt-2">
         <small class="mx-auto text-muted">Have an account? <a href="/login" class="text-primary">Log in</a></small>
     </div>
+</div>
 </div>
 {% endblock %}
