--- a/templates/tag.html
+++ b/templates/tag.html
@@ -59,7 +59,7 @@
                             <a class="disabledButton" href="/read/{{ titles[i]['summary_id'] }}" style="color: #017bff; font-size: 1.4em; font-weight: 200;">{{ titles[i]["article"] }}</a>
                         </div>
                         <div class="pl-1" style="font-size: 0.8em">
-                            Dcyphr-d by <a class="disabledButton" href="/public/{{ titles[i]['id'] }}" style="color: Red">@{{ titles[i]["username"] }}</a>
+                            dcyphr-d by <a class="disabledButton" href="/public/{{ titles[i]['id'] }}" style="color: Red">{{ titles[i]["first"] }} {{ titles[i]["last"] }}</a>
                         </div>
                         <div class="p-2" style="font-size: 0.95em">
                             {{ preview[i] }}...
