--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
 {% endblock %}
 
 {% block navbar %}
+<meta name="description" content="Decentralizing scientific literature. dcyphr makes it easy to read, request, and share lay summaries of scientific articles. We empower the public to access scientific results directly, save time for researchers and students, and broaden the scientific impact of researchers.">
 <div id="preloader">
     <div id="status" class="text-center">
         <img style="margin-top: 20vh" src="{{ url_for('static', filename='dna.svg') }}" alt="Loading...">
@@ -18,16 +19,17 @@
                         <li class="nav-item">
                             <a href="/" class="nav-link text-white">Home</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                              Explore
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                              <a class="dropdown-item" href="/explore" style="color: #000d25">Topics</a>
-                              <a class="dropdown-item" href="/method/0" style="color: #000d25">Methods</a>
-                              <a class="dropdown-item" href="/browse/0" style="color: #000d25">See all</a>
-                            </div>
-                         </li>
+                        <li class="nav-item"><a class="nav-link text-white" href="/explore">Explore</a></li>
+                        <!--<li class="nav-item dropdown">-->
+                        <!--    <a class="nav-link text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
+                        <!--      Explore-->
+                        <!--    </a>-->
+                        <!--    <div class="dropdown-menu" aria-labelledby="navbarDropdown">-->
+                        <!--      <a class="dropdown-item" href="/explore" style="color: #000d25">Topics</a>-->
+                        <!--      <a class="dropdown-item" href="/method/0" style="color: #000d25">Methods</a>-->
+                        <!--      <a class="dropdown-item" href="/browse/0" style="color: #000d25">See all</a>-->
+                        <!--    </div>-->
+                        <!-- </li>-->
                         <li class="nav-item"><a class="nav-link text-white" href="/request">Request</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link text-white" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -38,15 +40,16 @@
                               <a class="dropdown-item" href="/suggestions/0" style="color: #000d25">QuickTasks</a>
                             </div>
                          </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link text-white" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                              Help
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                              <a class="dropdown-item" href="/about" style="color: #000d25">About</a>
-                              <a class="dropdown-item" href="/contact" style="color: #000d25">Contact Us</a>
-                            </div>
-                         </li>
+                        <!--<li class="nav-item dropdown">-->
+                        <!--    <a class="nav-link text-white" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
+                        <!--      Help-->
+                        <!--    </a>-->
+                        <!--    <div class="dropdown-menu" aria-labelledby="navbarDropdown">-->
+                        <!--      <a class="dropdown-item" href="/about" style="color: #000d25">About</a>-->
+                        <!--      <a class="dropdown-item" href="/contact" style="color: #000d25">Contact Us</a>-->
+                        <!--    </div>-->
+                        <!-- </li>-->
+                        <li class="nav-item"><a class="nav-link text-white" href="/about">About</a></li>
                          <!--<li class="nav-item px-4 dropdown">-->
                          <!--  <div class="row">-->
                          <!--     <a class="navbar-brand" href="/"><font color="#017bff">dcyphr</font></a>-->
@@ -167,11 +170,11 @@
                     DECENTRALIZING SCIENCE
                 </div>
                 <p>
-                    Putting scientific results at your fingertips
+                    Putting scientific results at your fingertips.
                     <br>
-                    Keep up with literature and understand results
+                    Helping researchers and students save time
                     <br>
-                    Learn new topics faster
+                    in keeping up with literature and learning new topics.
                 </p>
 
                 <br>
@@ -203,15 +206,15 @@
                     SHARE KNOWLEDGE
                 </div>
                 <p>
-                    Join the movement and help make science more accessible
+                    Join the movement and help make science more accessible.
                     <br>
-                    Register and upload your summaries
+                    Upload summaries to expand your scientific impact.
                     <br>
-                    Work with AI to quickly dcyphr articles
+                    Work with AI to quickly dcyphr articles.
                 </p>
                 <br>
-                <a href="/tasks" class="btn bg-0 btn-lg border border-white">
-                    Contribute &nbsp &#8594;
+                <a href="/register" class="btn bg-0 btn-lg border border-white">
+                    Get started &nbsp &#8594;
                 </a>
             </div>
         </div>
@@ -276,11 +279,11 @@
                     REQUEST INSIGHTS
                 </div>
                 <p>
-                    Streamline your workflow with summaries you can trust
+                    Streamline your workflow with summaries you can trust.
                     <br>
-                    Turbocharge your research by requesting results immediately
+                    Turbocharge your research by requesting results immediately.
                     <br>
-                    Get personalized dcyphr-d articles
+                    Get personalized summaries today.
                 </p>
                 <br>
                 <a href="/request" class="btn btn-lg bg-white btn-primary" style="color: #017bff">
