--- a/templates/explore.html
+++ b/templates/explore.html
@@ -38,7 +38,7 @@
 
                             <div class="row">
                                 <div class="col-8 pl-1 p-0 mt-3 text-muted">
-                                    {{ tags[i]['count'] }} summaries
+                                    {{ tags[i]['COUNT(tag_id)'] }} summaries
                                 </div>
                             </div>
                         </div>
